tests/build/fail/widget/property_captured_required2.stderr
error: inherited widget `margin_widget` requires property `margin` to be captured
  --> $DIR/property_captured_required2.rs:39:21
   |
39 |     inherit!(super::margin_widget);
   |                     ^^^^^^^^^^^^^

error: inherited widget `foo_widget` requires property `foo` to be captured
  --> $DIR/property_captured_required2.rs:38:21
   |
38 |     inherit!(super::foo_widget);
   |                     ^^^^^^^^^^
